--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,7 +5,7 @@
 	<title>Zeph EPK Node | Admin</title>
 
 	<!-- FOR ANGULAR ROUTING -->
-	<base href="/">
+	<base href="/admin">
     <meta name="viewport" content="width=device-width">
 	<!-- CSS  -->
 	<link rel="stylesheet" href="lib/css/bootswatch.paper.min.css" />
@@ -32,12 +32,12 @@
 				
 				<div class="navbar-header">
 					<a href="/" class="navbar-brand" rel='home' style='margin-top: -4px;'>
-						<span>Zeph EPK</span>
+						<span><img style="max-height: 30px; transform: translate3d(0,0,0);" src="img/Zephaniah_logo_sm.png"></img></span>
 					</a>
 				</div>	
 				<ul class='nav navbar-nav navbar-left collapse navbar-collapse'>
-					<li><a href="/tickets"><span class="glyphicon glyphicon-edit"></span> Tickets</a></li>
-					<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+					<li><a href="/admin/tickets"><span class="glyphicon glyphicon-edit"></span> Tickets</a></li>
+					<li><a href="/admin/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
 					
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-sm visible-md visible-lg">
@@ -49,7 +49,7 @@
 						</a>
 						<ul class="dropdown-menu pull-right">
 							<li>
-								<a href="/profile" ng-href="/profile">
+								<a href="/admin/profile" ng-href="/profile">
 									<i class="glyphicon glyphicon-cog"></i> Profile
 								</a>
 							</li>
@@ -118,7 +118,7 @@
 				</div>
 				<div class='col-md-4 col-sm-12 col-xs-12'>
 					<h4>About</h4>
-					<p>This site is currently in development.  This is a conversion of the <a href='https://github.com/ijbender/zephepk'></a>same project</a> written in PHP.</p>
+					<p>This site is currently in development.  This is a conversion of the <a href='https://github.com/ijbender/zephepk'>same project</a> written in PHP.</p>
 				</div>
 			</div>
 		</div>
