--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,6 @@
 body
 {
 	background: white;
-	*background: repeating-linear-gradient(45deg, #F8F8F8, #F8F8F8 10px, #FDFDFD 10px, #FDFDFD 20px);
 }
 
 h1:after
@@ -680,6 +679,11 @@ div[ng-view].ng-enter
 .gi-5x
 {
 	font-size: 5em;
+}
+
+.navbar-inverse
+{
+	background-color: #777;
 }
 
 /*!
