--- a/public/css/mainstyles.css
+++ b/public/css/mainstyles.css
@@ -1,7 +1,8 @@
-* {
-  box-sizing : border-box;
-  margin     : 0;
-  padding    : 0;
+*
+{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 /*
@@ -10,53 +11,58 @@
   *****************
 */
 
-body {
-  max-width   : 500px;
-  margin      : 0 auto;
-  padding     : 0;
-  color       : #333;
-  background  : #eee;
-  text-align  : center;
-  font-family : 'Oswald',
+body
+{
+	max-width: 500px;
+	margin: 0 auto;
+	padding: 0;
+	color: #333;
+	background: #eee;
+	text-align: center;
+	font-family: 'Oswald',
                 sans-serif;
-  font-weight : 300;
-  font-size: 1.2em;
+	font-weight: 300;
+	font-size: 1.2em;
 }
 
-
-
-.line {
-  width         : 70%;
-  height        : 1px;
-  margin        : 25px auto;
-  border-bottom : 1px solid #888;
-  background    : #eee;
+.line
+{
+	width: 70%;
+	height: 1px;
+	margin: 25px auto;
+	border-bottom: 1px solid #888;
+	background: #eee;
 }
 
-h1 {
-  margin         : 50px 0 40px;
-  text-transform : uppercase;
-  font-size: 2em;
+h1
+{
+	margin: 50px 0 40px;
+	text-transform: uppercase;
+	font-size: 2em;
 }
 
 h2,
 h3,
-h4 {
-  margin : 25px;
+h4
+{
+	margin: 25px;
 }
 
-li {
-  list-style : none;
+li
+{
+	list-style: none;
 }
 
-a {
-  text-decoration: none;
-  color       : #333;
-  font-weight: 400;
+a
+{
+	text-decoration: none;
+	color: #333;
+	font-weight: 400;
 }
 
-p {
-  font-weight:300;
+p
+{
+	font-weight: 300;
 }
 
 /*
@@ -65,14 +71,16 @@ p {
   *****************
 */
 
-header {
-  width  : 100%;
-  margin : 10px auto 50px;
+header
+{
+	width: 100%;
+	margin: 10px auto 50px;
 }
 
 header img,
-header video {
-  max-width : 100%;
+header video
+{
+	max-width: 100%;
 }
 
 /*
@@ -81,40 +89,48 @@ header video {
   *****************
 */
 
-.members {
-  margin: 40px 0;
-  max-width: 100%;
+.members
+{
+	margin: 40px 0;
+	max-width: 100%;
 }
 
-.members .member {
-  height: 400px;
-  overflow: hidden;
-  position: relative;
+.members .member
+{
+	height: 400px;
+	overflow: hidden;
+	position: relative;
 }
 
-.members .label {
-  margin: 0;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
+.members .label
+{
+	margin: 0;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
 }
 
 .members .label h3,
-.members .label h4 {
-  display: inline-block;
-  margin: 0 0 0 4px;
-  color: #eee;
+.members .label h4
+{
+	display: inline-block;
+	margin: 0 0 0 4px;
+	color: #eee;
 }
 
-.members .label h3 {
-  font-size: 3em;
-}
-.members .label h4 {
-  font-size: 1.5em;
+.members .label h3
+{
+	font-size: 3em;
 }
 
-.members img {
-  max-width : 100%;
+.members .label h4
+{
+	font-size: 1.5em;
+}
+
+.members img
+{
+	max-width: 100%;
 }
 
 /*
@@ -123,8 +139,9 @@ header video {
   *****************
 */
 
-.discography img {
-  max-width : 400px;
+.discography img
+{
+	max-width: 400px;
 }
 
 /*
@@ -133,8 +150,9 @@ header video {
   *****************
 */
 
-.shows {
-  min-height : 300px;
+.shows
+{
+	min-height: 300px;
 }
 
 /*
@@ -143,8 +161,9 @@ header video {
   *****************
 */
 
-.contact li {
-  margin : 30px 0;
+.contact li
+{
+	margin: 30px 0;
 }
 
 /*
@@ -152,36 +171,40 @@ header video {
   Reviews
   *****************
 */
-.reviews a {
-  margin: 30px 0;
-  display: block;
+.reviews a
+{
+	margin: 30px 0;
+	display: block;
 }
 /*
   ****************
   Social Icons
   *****************
 */
-.social-icons {
-
+.social-icons
+{
 }
 
-.social-icons li {
-  display: inline-block;
+.social-icons li
+{
+	display: inline-block;
 }
 
-.social-icons img  {
-  margin: 10px 20px;
-  width: 30px;
-  height: 30px;
-  -webkit-filter: grayscale(100%);
+.social-icons img
+{
+	margin: 10px 20px;
+	width: 30px;
+	height: 30px;
+	-webkit-filter: grayscale(100%);
 }
 
-.social-icons img:hover {
-  -webkit-filter: grayscale(0);
+.social-icons img:hover
+{
+	-webkit-filter: grayscale(0);
 }
 
-img {
-
+img
+{
 }
 /*
   ****************
@@ -189,15 +212,18 @@ img {
   *****************
 */
 
-footer {
-  margin: 30px;
-  font-size: .8em;
+footer
+{
+	margin: 30px;
+	font-size: .8em;
 }
 
-footer li {
-  margin: 20px;
+footer li
+{
+	margin: 20px;
 }
 
-footer a {
-  font-weight: 300;
+footer a
+{
+	font-weight: 300;
 }
