--- a/public/views/403.html
+++ b/public/views/403.html
@@ -1,2 +1,2 @@
-<img src="http://www.zephaniahband.com/images/Zephaniah_logo.png" alt="Zephaniah Logo">
-<p>I guess you tried to do something you don't have the permissions for.  You probably shouldn't do that, man.</p>
+<img style="width:80%; display: block; margin-left: auto; margin-right: auto;" src="http://www.zephaniahband.com/images/Zephaniah_logo.png" alt="Zephaniah Logo">
+<p class="text-center">I guess you tried to do something you don't have the permissions for.  You probably shouldn't do that, man.</p>
