Add some database routes in node & angular, test and create display pages

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width">
 	<!-- CSS  -->
 	<link rel="stylesheet" href="lib/css/bootswatch.paper.min.css" />
-	<!--<link rel="stylesheet" href="lib/css/xeditable.min.css" />-->
+	<link rel="stylesheet" href="lib/css/xeditable.min.css" />
 	<link rel="stylesheet" href="css/main.css" />
 
 	<!-- JS -->
@@ -19,7 +19,7 @@
 	<script src="ng/zeph.epk.js"></script>
 	<script src="lib/js/moment.min.js"></script>
 	<script src="lib/js/angular-moment.min.js"></script>
-	<!--<script src="lib/js/xeditable.min.js"></script>-->
+	<script src="lib/js/xeditable.min.js"></script>
 </head>
 <body ng-app="epk" ng-controller="mainController as main">
 	<header>
@@ -34,11 +34,11 @@
 				
 				<div class="navbar-header">
 					<a href="/" class="navbar-brand" rel='home' style='margin-top: -4px;'>
-						<span><img style="max-height: 30px; transform: translate3d(0,0,0);" src="img/Zephaniah_logo_sm.png"></img></span>
+						<span><img style="max-height: 30px; transform: translate3d(0,0,0);" src="img/Zephaniah_logo_smw.png"></img></span>
 					</a>
 				</div>	
 				<ul class='nav navbar-nav navbar-left collapse navbar-collapse'>
-					<li><a href="/admin/whoa-bro"><span class="glyphicon glyphicon-blackboard"></span> Database</a></li>
+					<li><a href="/admin/db"><span class="glyphicon glyphicon-blackboard"></span> Database</a></li>
 					<li><a href="/admin/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
 					
 				</ul>
