Fix loading display when querying for table information

--- a/public/views/db/table.html
+++ b/public/views/db/table.html
@@ -29,7 +29,7 @@
 	</div>
 </div>
 
-<div class="jumbotron text-center" ng-show="tables.processing && !tables.data">
+<div class="jumbotron text-center" ng-show="table.processing && !table.data">
 	<span class="glyphicon glyphicon-repeat spinner"></span>
 	<h3>Loading {{ table.data.table }} ...</h3>
 </div>
