--- a/public/views/db/table.html
+++ b/public/views/db/table.html
@@ -58,7 +58,7 @@
 				<div class="popover-wrapper">
 					<a ng-if="row[col].length < 30 || isNumber(row[col])" href="#" editable-text="row[col]">
 						<span ng-if="!isDate(row[col])">{{ row[col] }}</span>
-						<span ng-if="isDate(row[col])">{{ row[col] | amDateFormat:'MM-DD-YYYY' }}</span>
+						<span ng-if="isDate(row[col])">{{ parseDate(row[col]) | amDateFormat:'MM-DD-YYYY' }}</span>
 					</a>
 					<a ng-if="row[col].length >= 30" href="#" editable-textarea="row[col]" rowspan=10 colspan=10>{{ row[col] }}</a>
 				</div>
