--- a/public/css/main.css
+++ b/public/css/main.css
@@ -686,6 +686,13 @@ div[ng-view].ng-enter
 	background-color: #333;
 }
 
+textarea.editable-input
+{
+	min-width: 300px;
+	min-height: 300px;
+	height: auto;
+}
+
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license
