--- a/public/css/responsive-styles.css
+++ b/public/css/responsive-styles.css
@@ -1,56 +1,66 @@
+
 /**********************
-Responsive 768px
+Responsive 768px or smaller
 **********************/
 
-@media screen and (min-width: 768px)
-{
-	body
-	{
-		max-width: 100%;
-	}
+@media screen and (max-width: 768px) {
+  body {
+    max-width: 100%;
+  }
+  
+  #content{
+    width: 100%;
+  }
+  
+  #bg_video {
+    display: none;
+  }
+  
+  /*
+  header img,
+  header video {
+    max-width : 80%;
+  }
+  */
 
-	header img,
-  header video
-	{
-		max-width: 80%;
-	}
+  .members {
+    overflow: hidden;
 
-	.members
-	{
-		overflow: hidden;
-	}
-
-	.members .member
-	{
-		height: 400px;
-		overflow: hidden;
-		position: relative;
-		width: 48%;
-		margin: 1%;
-		float: left;
-	}
-
-	.discography img
-	{
-		width: 300px;
-		margin: 0 2em;
-	}
-
-	.contact li
-	{
-		display: inline-block;
-		margin: 0 2.2em;
-	}
+  }
+ 
 }
 
+
 /**********************
-Responsive 1024px
+Responsive greater than 768px
 **********************/
 
-@media screen and (min-width: 1024px)
-{
-	body
-	{
-		max-width: 60%;
-	}
+@media screen and (min-width: 768px) {
+  body {
+    max-width: 60%;
+  }
+  
+  #bg_video {
+    display: inherit;
+  }
+  
+  .discography div {
+    max-width: 50%;
+    float: left;
+  }
+
+  .members .member {
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    width: 48%;
+    margin: 1%;
+    float: left;
+  }
+  
+  .contact li{
+    display: inline-block;
+    margin: 0 2.2em;
+  }
+ 
 }
