--- a/public/css/mainstyles.css
+++ b/public/css/mainstyles.css
@@ -120,15 +120,6 @@ header video {
   max-width : 100%;
 }
 
-@media only screen and (min-width: 2000px) {
-  .discography {
-    font-size: 1.5em;
-  }
-
-  .shows { 
-    font-size: 1.5em;
-  }
-}
 /*
  ******************
  Background Video
@@ -198,14 +189,16 @@ header video {
   Discography
   *****************
 */
+
 .discography {
   margin: 40px 0;
 }
 
 .discography img {
-  min-width: 50%
+  min-width: 50%;
   min-height: 50%;
-  width: 90%!important;
+  width: 17em;
+  max-width: 90%;
   border: 1px solid black;
 }
 
@@ -297,7 +290,6 @@ header video {
 .social-icons img:hover {
   -webkit-filter: grayscale(0);
 }
-
 
 /*
   ****************
